tests/snapshots/test_runner__tests__compiler__transpile__no_entry_no_do_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// This is for testing:
// Entry points should only be transpiled at entry points

export let foo = (null: Null): String => "Hello"

"Hello world".print()

============
EXIT CODE
============
0

============
STDOUT
============
Hello world

============
STDERR
============
