tests/snapshots/test_runner__tests__compiler__transpile__overloading_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x: Integer = 1

let x: String = 'hello'

let (a: String) x: Integer = a print; 999

entry
  'hello' x print; // 'hello' 999
  let y: String = x;
  y print; // 'hello';
  let z: Integer = x;
  z print // 1

============
EXIT CODE
============
0

============
STDOUT
============
'hello'
999
'hello'
1

============
STDERR
============
