tests/snapshots/test_runner__tests__compiler__transpile__quoted_expression_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do {
  let hello_world = `"yoyo"`;
  hello_world.value.print();
  hello_world.meta.print()
}

============
EXIT CODE
============
0

============
STDOUT
============
yoyo
{
  '$filename': 'tests/compiler/transpile/quoted_expression_1.kk',
  '$line_start': 1,
  '$line_end': 1,
  '$column_start': 20,
  '$column_end': 27
}

============
STDERR
============
