tests/snapshots/test_runner__tests__compiler__transpile__record_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  let foo = {() -> (x = 123)};
  (foo ()) .x print

============
EXIT CODE
============
0

============
STDOUT
============
123

============
STDERR
============
