tests/snapshots/test_runner__tests__compiler__transpile__record_update_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let a = { x: 2 y: { z: 3 } }
let b = a.{ x: 3 y.{ z: 4 }}

do a.print()
do b.print()

============
EXIT CODE
============
0

============
STDOUT
============
{ x: 2, y: { z: 3 } }
{ x: 3, y: { z: 4 } }

============
STDERR
============
