tests/snapshots/test_runner__tests__compiler__transpile__shorthand_function_call_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo<A>
  : | A A => [A]
  = | x y => [x y]

do "hello".(|.foo("world")).print

============
EXIT CODE
============
0

============
STDOUT
============
[ 'hello', 'world' ]

============
STDERR
============
