tests/snapshots/test_runner__tests__compiler__transpile__shorthand_record_access_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do { x: 2 }.(.x).print()

============
EXIT CODE
============
0

============
STDOUT
============
2

============
STDERR
============
