tests/snapshots/test_runner__tests__compiler__transpile__single_dispatch_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo (_: String): String = "Hello"

let foo (): String = "World"

entry
  "test" foo print;
  foo () print;
  foo () foo print

============
EXIT CODE
============
0

============
STDOUT
============
Hello
World
Hello

============
STDERR
============
