tests/snapshots/test_runner__tests__compiler__transpile__single_dispatch_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = \(_: String) => "Hello"
let foo = \(_: Boolean) => "World"

let map = \(x, f) => x.f()

do true.map(foo).print()
do true.map(foo).map(\x => x.foo()).print()

============
EXIT CODE
============
0

============
STDOUT
============
World
Hello

============
STDERR
============
