tests/snapshots/test_runner__tests__compiler__transpile__statements_expression_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  let x = 'hello';
  let y = 'bye';
  '${x} and ${y}' print

============
EXIT CODE
============
0

============
STDOUT
============
hello and bye

============
STDERR
============
