tests/snapshots/test_runner__tests__compiler__transpile__string_escape_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do "\"Hello world\"".print()
do "\\Hello world\\".print()

============
EXIT CODE
============
0

============
STDOUT
============
"Hello world"
\Hello world\

============
STDERR
============
